@@ -162,7 +162,7 @@ public class GameController {
             }
 
             // 5. 设置当前玩家
-            currentPlayer = players.getFirst();
+            currentPlayer = players.get(0);
             System.out.println("Current player: " + (currentPlayer != null ? currentPlayer.getName() : "null"));
             if (actionBarController != null && currentPlayer != null) {
                 actionBarController.setCurrentPlayer(currentPlayer);
@@ -684,6 +684,14 @@ public class GameController {
         if (gameView != null) {
             gameView.updateWaterLevel(level);
         }
+    }
+
+    public Card getActiveSpecialCard() {
+        return activeSpecialCard;
+    }
+
+    public void setActiveSpecialCard(Card activeSpecialCard) {
+        this.activeSpecialCard = activeSpecialCard;
     }
 
     public void returnToMainMenu() {
